Vista "Mi Perfil" funcionando :+1:

--- a/cameraback/cameraback-boot/src/main/resources/application.yml
+++ b/cameraback/cameraback-boot/src/main/resources/application.yml
@@ -20,7 +20,7 @@ ontimize:
             - OPTIONS
             - DELETE
    jdbc:
-      name-convention: upper
+      name-convention: lower
       sqlhandler: postgresql
       sql-condition-processor:
          uppper-string: true
