--- a/cameraback/cameraback-boot/src/main/resources/application.yml
+++ b/cameraback/cameraback-boot/src/main/resources/application.yml
@@ -63,6 +63,17 @@ server:
       enabled: true
       mime-types: application/json, application/xml
 spring:
+   mail:
+      host: smtp.gmail.com
+      port: 587
+      username: mymail@gmail.com
+      password: mypassword
+      protocol: smtp
+      tls: true
+      properties.mail.smtp:
+         auth: true
+         starttls.enable: true
+         ssl.trust: smtp.gmail.com
    jpa:
       database: 2023_BFS_3_G2
       show-sql: true
