Date range funcionando
-Las fechas que estan aceptadas ya no se pueden seleccionar
-El formulario valida si el perioodo es valido
-Es la 1::40 de la mañana
-Se que no deberia tocar mas codigo, ya paro :dog:

--- a/camerafront/package.json
+++ b/camerafront/package.json
@@ -33,6 +33,7 @@
     "@angular/upgrade": "^8.2.14",
     "core-js": "^3.6.4",
     "ngx-material-timepicker": "5.4.3",
+    "ngx-toastr": "^18.0.0",
     "ontimize-web-ngx": "8.11.1",
     "ontimize-web-ngx-charts": "^8.2.0",
     "ontimize-web-ngx-gallery": "^8.1.4",
